fix favourite flag to be saved per user not per project
